# inquest

./: .gitignore  Cargo.toml  EXAMPLES.md  Makefile  NEWS  README.gh-action.md  README.mcp.md  README.md  action.yml  automated-test-isolation-bisection.html  configuration.html  forcing-isolation.html  grouping-tests.html  hiding-tests.html  index.html  inq.1  inquest.toml  listing-tests.html  overview.html  parallel-testing.html  print.html  remote-or-isolated-test-environments.html  repositories.html  running-tests.html  searchindex.js  setuptools-integration.html
.claude-plugin/: marketplace.json
.github/workflows/: docs.yml  publish.yml  release.yml  test.yml
design/: design.html
developers/: development-guidelines.html
devnotes/: git-mirror-design.md  graph-design.md
doc/: book.toml
doc/src/: automated-test-isolation-bisection.md  configuration.md  forcing-isolation.md  grouping-tests.md  hiding-tests.md  listing-tests.md  overview.md  parallel-testing.md  remote-or-isolated-test-environments.md  repositories.md  running-tests.md  setuptools-integration.md
doc/src/design/: design.md
doc/src/developers/: development-guidelines.md
plugins/claude/: .mcp.json
plugins/claude/.claude-plugin/: plugin.json
plugins/claude/skills/test-triage/: SKILL.md
src/: abbreviation.rs  config.rs  error.rs  eta.rs  git_notes.rs  grouping.rs  lib.rs  main.rs  mcp.rs  ordering.rs  partition.rs  pty.rs  subunit_stream.rs  test_executor.rs  test_runner.rs  testcommand.rs  watchdog.rs
src/commands/: analyze_isolation.rs  auto.rs  bisect.rs  ci.rs  config.rs  diff.rs  export.rs  failing.rs  flaky.rs  help.rs  info.rs  init.rs  last.rs  list_tests.rs  load.rs  log.rs  mod.rs  prune.rs  quickstart.rs  repo_check.rs  rerun.rs  run.rs  running.rs  shard.rs  slowest.rs  stats.rs  stress.rs  summarize.rs  upgrade.rs  utils.rs  wait.rs  web.rs
src/repository/: file.rs  inquest.rs  mod.rs  test_run.rs  testr.rs
src/web/: index.rs  mod.rs  profiles.rs  repo.rs  run.rs  runs.rs  test_history.rs  test_list.rs
templates/: web_index.html
testrepository/: testcommand.py
testrepository/tests/: test_repository.py
tests/: ci_tests.rs  cli_tests.rs  error_tests.rs  integration_tests.rs  testcommand_tests.rs
