[package]
name = "inquest"
version = "0.1.1"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
license = "Apache-2.0 OR BSD-3-Clause"
description = "A repository of test results"
repository = "https://github.com/testing-cabal/testrepository"
keywords = ["subunit", "testrunner", "unittest", "testing"]
categories = ["development-tools::testing"]

[features]
default = ["gdbm", "tdb"]
tdb = ["dep:trivialdb"]

[[bin]]
name = "inq"
path = "src/main.rs"

[lib]
name = "inquest"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2"
serde_json = "1.0"
gdbm = { version = "0.2", optional = true }
rusqlite = { version = ">=0.29,<0.39" }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = "0.4"
subunit = "0.3.0"
tempfile = "3.13"
regex = "1.0"
glob = "0.3"
memmap2 = "0.9"
num_cpus = "1.16"
indicatif = ">=0.17,<0.19"
console = ">=0.15,<0.17"
trivialdb = { version = ">=0.1.9", optional = true }

[dev-dependencies]
tempfile = "3.13"
