[package]
name = "inquest"
version = "0.1.2"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
license = "Apache-2.0 OR BSD-3-Clause"
description = "A repository of test results"
repository = "https://github.com/testing-cabal/testrepository"
keywords = ["subunit", "testrunner", "unittest", "testing"]
categories = ["development-tools::testing"]

[features]
default = ["gdbm", "testr"]
testr = []
gdbm = ["testr", "dep:gdbm"]
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars", "dep:serde_json"]

[[bin]]
name = "inq"
path = "src/main.rs"

[lib]
name = "inquest"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2"
gdbm = { version = "0.2", optional = true }
rusqlite = { version = ">=0.29,<0.40" }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4"
chrono = { version = "0.4", features = ["serde"] }
subunit = "0.3.0"
tempfile = "3.13"
regex = "1.0"
glob = "0.3"
libc = "0.2"
memmap2 = "0.9"
num_cpus = "1.16"
indicatif = ">=0.17,<0.19"
console = ">=0.15,<0.17"
toml = "1.0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rmcp = { version = "1", features = ["server", "transport-io"], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
schemars = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3.13"
